# hogwards

./: .gitignore  README.md  docker-compose.yaml  env_sample  pyproject.toml  pytest.ini
src/apps/authors/: admin.py  models.py
src/apps/authors/migrations/: 0001_initial.py
src/apps/books/: admin.py  models.py  urls.py  views.py
src/apps/books/migrations/: 0001_initial.py  0002_book_image.py
src/apps/genres/: admin.py
src/apps/genres/migrations/: 0001_initial.py
src/apps/images/: admin.py  models.py
src/apps/images/migrations/: 0001_initial.py
src/apps/pages/: views.py
src/apps/users/: forms.py  models.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_user_birthday_user_role.py  0003_user_book_reservations.py  0004_user_image.py  0005_alter_user_options_user_count_read_books.py
src/apps/users/templates/: login.html  profile.html  register.html
src/core/: settings.py  urls.py
src/templates/: about.html  all_cards.html  base.html  book_card.html  book_detail.html  footer.html  header.html  index.html  login_page.html  recomendation_book.html  side_menu.html  welcome.html
